@@ -252,6 +252,13 @@
             --add-opens=java.base/java.lang=ALL-UNNAMED
             ${surefire.args.base}
         </surefire.test.unit.open.args>
+        <!-- Emulate the behaviour in standalone, where slf4j is loaded in the boot layer -->
+        <surefire.slf4j.module.args>
+            -XX:+IgnoreUnrecognizedVMOptions
+            --module-path=${org.slf4j:slf4j-api:jar}
+            --add-modules=org.slf4j
+            ${surefire.args.base}
+        </surefire.slf4j.module.args>
 
         <commonsCollectionsVersion>3.2.2</commonsCollectionsVersion>
         <!-- this groovy version is to be used during the build process or for tests, not bundled in the distro -->
